<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductFormActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:text="Create New Product"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="15dp"
        android:id="@+id/formTitleId"
        android:paddingBottom="15dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/formTitleId"
        tools:ignore="MissingConstraints"
        android:id="@+id/titleInputId"
        android:background="@drawable/rounded_shadowed_text_edit"
        android:hint="@string/en_title"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <EditText
        app:layout_constraintTop_toBottomOf="@id/titleInputId"
        tools:ignore="MissingConstraints"
        android:id="@+id/skuInputId"
        android:background="@drawable/rounded_shadowed_text_edit"
        android:hint="@string/sku"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <EditText
        app:layout_constraintTop_toBottomOf="@id/skuInputId"
        tools:ignore="MissingConstraints"
        android:id="@+id/descriptionInputId"
        android:background="@drawable/rounded_shadowed_text_edit"
        android:hint="@string/en_description"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <EditText
        app:layout_constraintTop_toBottomOf="@id/descriptionInputId"
        tools:ignore="MissingConstraints"
        android:id="@+id/priceInputId"
        android:background="@drawable/rounded_shadowed_text_edit"
        android:hint="@string/en_price"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <EditText
        app:layout_constraintTop_toBottomOf="@id/priceInputId"
        tools:ignore="MissingConstraints"
        android:id="@+id/quantityInputId"
        android:background="@drawable/rounded_shadowed_text_edit"
        android:hint="@string/en_quantity"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/quantityInputId"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/en_cannot_add_image_on_app"/>

    <Button
        android:id="@+id/saveBtnId"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="top|center"
        android:backgroundTint="@color/primary"
        android:text="@string/en_save"
        android:layout_margin="10dp"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:cornerRadius="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>