<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/loginThumbnailId"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/applicationNameId"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"

        android:src="@drawable/warehouse_image" />

    <TextView
        android:id="@+id/applicationNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/loginThumbnailId"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/formTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_login"
        app:layout_constraintTop_toBottomOf="@id/applicationNameId"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputsLayoutId"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/formTitleId"
        app:layout_constraintBottom_toTopOf="@id/submitLoginBtnId"
        android:layout_height="wrap_content">
        <EditText
            tools:ignore="MissingConstraints"
            android:id="@+id/fullNameInputId"
            android:background="@drawable/rounded_shadowed_text_edit"
            android:hint="@string/en_fullname"
            android:visibility="gone"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <EditText
            app:layout_constraintTop_toBottomOf="@id/fullNameInputId"
            tools:ignore="MissingConstraints"
            android:id="@+id/usernameInputId"
            android:background="@drawable/rounded_shadowed_text_edit"
            android:hint="@string/en_username"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <EditText android:id="@+id/passwordInputId"
            app:layout_constraintTop_toBottomOf="@id/usernameInputId"
            android:background="@drawable/rounded_shadowed_text_edit"
            android:hint="@string/en_password"
            android:padding="20dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="70dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/forgotPasswordBtnId"
            android:textSize="17dp"
            android:textColor="@color/medium"
            app:layout_constraintTop_toBottomOf="@id/passwordInputId"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="10dp"
            android:text="@string/en_forgot_your_password"/>
        <EditText android:id="@+id/confirmPasswordInputId"
            app:layout_constraintTop_toBottomOf="@id/passwordInputId"
            android:background="@drawable/rounded_shadowed_text_edit"
            android:hint="@string/en_confirm_password"
            android:visibility="gone"
            android:padding="20dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="70dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/submitLoginBtnId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputsLayoutId"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="top|center"
        android:backgroundTint="@color/primary"
        android:text="@string/en_login"
        android:layout_margin="10dp"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:cornerRadius="50dp" />

    <TextView
        android:id="@+id/switchToOtherFormBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/submitLoginBtnId"
        app:layout_constraintBottom_toTopOf="@+id/doneById"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:clickable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/en_register"/>
    <TextView
        android:id="@+id/doneById"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchToOtherFormBtnId"
        android:text="@string/en_done_by"/>

</androidx.constraintlayout.widget.ConstraintLayout>